# zr-ge

./: .ctags  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
cmake/: FindSDL2_ttf.cmake
doc/: config
doc/html/: CMakeLists_8txt.html  annotated.html  blend__mode_8h.html  blend__mode_8h__dep__incl.dot  blend__mode_8h__incl.dot  blend__mode_8h_source.html  classes.html  classzr_1_1display__mode-members.html  classzr_1_1display__mode.html  classzr_1_1display__mode__config-members.html  classzr_1_1display__mode__config.html  classzr_1_1display__mode__config__inherit__graph.dot  classzr_1_1display__mode__inherit__graph.dot  classzr_1_1immutable__size-members.html  classzr_1_1immutable__size.html  classzr_1_1pixel__format-members.html  classzr_1_1pixel__format.html  classzr_1_1renderer-members.html  classzr_1_1renderer.html  classzr_1_1size-members.html  classzr_1_1size.html  classzr_1_1texture-members.html  classzr_1_1texture.html  classzr_1_1texture__inherit__graph.dot  classzr_1_1window-members.html  classzr_1_1window.html  classzr_1_1window__inherit__graph.dot  color_8h.html  color_8h__dep__incl.dot  color_8h_source.html  dir_a93e6e1601f3ab298450d3a6b6b001e4.html  dir_a93e6e1601f3ab298450d3a6b6b001e4_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  display__mode_8h_source.html  display__mode__config_8h.html  display__mode__config_8h__dep__incl.dot  display__mode__config_8h__incl.dot  display__mode__config_8h_source.html  exceptions_8h.html  exceptions_8h__dep__incl.dot  (+68 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  (+52 more)
doc/latex/: CMakeLists_8txt.tex  annotated.tex  blend__mode_8h.tex  blend__mode_8h.tex.tmp  blend__mode_8h__dep__incl.dot  blend__mode_8h__incl.dot  blend__mode_8h_source.tex  classzr_1_1display__mode.tex  classzr_1_1display__mode.tex.tmp  classzr_1_1display__mode__coll__graph.dot  classzr_1_1display__mode__config.tex  classzr_1_1display__mode__config.tex.tmp  classzr_1_1display__mode__config__inherit__graph.dot  classzr_1_1immutable__size.tex  classzr_1_1pixel__format.tex  classzr_1_1renderer.tex  classzr_1_1size.tex  classzr_1_1texture.tex  classzr_1_1texture__coll__graph.dot  classzr_1_1window.tex  classzr_1_1window__inherit__graph.dot  color_8h.tex  color_8h__dep__incl.dot  color_8h_source.tex  dir_a93e6e1601f3ab298450d3a6b6b001e4.tex  dir_a93e6e1601f3ab298450d3a6b6b001e4_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.tex  display__mode__config_8h.tex  display__mode__config_8h__dep__incl.dot  display__mode__config_8h__incl.dot  display__mode__config_8h_source.tex  exceptions_8h.tex  exceptions_8h.tex.tmp  exceptions_8h__dep__incl.dot  exceptions_8h__incl.dot  exceptions_8h_source.tex  files.tex  hierarchy.tex  immutable__size_8h.tex  immutable__size_8h__dep__incl.dot  (+35 more)
docs/help/: loading-resources.md
examples/: CMakeLists.txt
examples/minimal-font-rendering/: CMakeLists.txt  main.cpp
examples/pong/: CMakeLists.txt  main.cpp  tags
examples/pong/include/: components.h  config.h  entity-builders.h  keybinds.h  pong.h  renders.h  systems.h
examples/pong/src/: CMakeLists.txt  entity-builders.cpp  keybinds.cpp  renders.cpp  systems.cpp
extlib/: CMakeLists.txt
include/: CMakeLists.txt  exceptions.h  game-engine.hpp  immutable_rect.h  immutable_size.h  mutable_size.h  rect.h  sdl_wrapper.h  size.h  underlying_types.h  util.h
include/game-engine/: initializer.hpp
include/sdl_wrapper/: .pixel_format.h.swp  blend_mode.h  color.h  display_mode.h  display_mode_config.h  event.h  image.h  pixel_format.h  pixels.h  render_dispatch.h  renderable.h  renderer.h  texture.h  window.h
include/underlying_types/: pos.h  rect.h  size.h
lib/: CMakeLists.txt
src/: .main.cpp.swp  CMakeLists.txt  main.cpp
src/sdl_wrapper/: blend_mode.cpp  display_mode.cpp  display_mode_config.cpp  image.cpp  pixel_format.cpp  render_dispatch.cpp  renderer.cpp  texture.cpp  window.cpp
tests/: conways_life.cpp  image.cpp  procedural_generation.cpp
